--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "build:prod":"nodemon dist/src/shared/infra/http/server.js"
+    "build:prod":"nodemon dist/src/shared/infra/http/server.js",
+    "start": "node dist/src/shared/infra/http/server.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
